[gd_scene load_steps=2 format=3 uid="uid://couivylf4qpgd"]

[ext_resource type="Script" path="res://scripts/ui/lobby_menu.gd" id="1_gula8"]

[node name="LobbyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gula8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.0262397, 0.124579, 0.2873, 0.4)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 53.0
offset_top = 31.0
offset_right = -53.0
offset_bottom = 335.0
grow_horizontal = 2
theme_override_constants/separation = 19

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Create a Room"
horizontal_alignment = 1

[node name="HostSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HostLabel" type="Label" parent="VBoxContainer/HostSection"]
layout_mode = 2
text = "Host"

[node name="HostRoomContainer" type="HBoxContainer" parent="VBoxContainer/HostSection"]
layout_mode = 2

[node name="HostRoomLabel" type="Label" parent="VBoxContainer/HostSection/HostRoomContainer"]
layout_mode = 2

[node name="HostRoomInput" type="LineEdit" parent="VBoxContainer/HostSection/HostRoomContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
placeholder_text = "Room Name"

[node name="HostButton" type="Button" parent="VBoxContainer/HostSection"]
layout_mode = 2
text = "Host"

[node name="JoinSection" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="JoinLabel" type="Label" parent="VBoxContainer/JoinSection"]
layout_mode = 2
text = "Join"

[node name="JoinRoomController" type="HBoxContainer" parent="VBoxContainer/JoinSection"]
layout_mode = 2

[node name="JoinRoomLabel" type="Label" parent="VBoxContainer/JoinSection/JoinRoomController"]
layout_mode = 2

[node name="JoinRoomInput" type="LineEdit" parent="VBoxContainer/JoinSection/JoinRoomController"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Room Name"

[node name="IPContainer" type="HBoxContainer" parent="VBoxContainer/JoinSection"]
layout_mode = 2

[node name="IPLabel" type="Label" parent="VBoxContainer/JoinSection/IPContainer"]
layout_mode = 2

[node name="IPInput" type="LineEdit" parent="VBoxContainer/JoinSection/IPContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "IP"

[node name="JoinButton" type="Button" parent="VBoxContainer/JoinSection"]
layout_mode = 2
text = "Join"

[node name="StatusContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer/StatusContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Back"
